--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Vortex Multi-Game Hub",
-  "short_name": "GameHub",
+  "name": "Aden-Game",
+  "short_name": "Aden",
   "description": "Koleksi  Game Seru dalam Satu Aplikasi",
   "start_url": "index.html",
   "display": "standalone",
